# P5

./: Makefile  README.md  meson.build
samples/: Hawaii5-0.sco  The_Christmas_Song_Lennon.sco  ToyStory_A_Friend_in_me.sco
src/: meson.build
src/doxyfile/: meson.build
src/effects/: effect.cpp  tremolo.cpp  tremolo.h  vibrato.cpp  vibrato.h
src/include/: effect.h  envelope_adsr.h  instrument.h  keyvalue.h
src/instruments/: instrument.cpp  instrument_dumb.cpp  instrument_dumb.h  instrument_fm.cpp  instrument_fm.h  seno.cpp  seno.h
src/midi2scores/: meson.build  midi2sco.py  readme.txt
src/midi2scores/src/: .midi2skini.cpp.swp  MidiFile.cpp  midi2skini.cpp
src/pav/: meson.build
src/synth/: envelope_adsr.cpp  midi_score.cpp  midi_score.h  multinote_instr.cpp  multinote_instr.h  orchest.cpp  orchest.h  synthesizer.cpp
work/: doremi.sco  dumb.orc  effects.orc  graph.py  tblfile.txt  xvector.txt
